# catch_fish

./: .env.example  .gitignore  CLAUDE.md  PROJECT_SPEC_TEMPLATE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  阅读顺序.md
.claude/: settings.local.json
catch_fish-main/: CLAUDE.md  Dockerfile  PROJECT_SPEC_TEMPLATE.md  README.md  docker-compose.yml  pyproject.toml  阅读顺序.md
catch_fish-main/src/agents/: base.py
catch_fish-main/src/agents/calculator/: agent.py  prompts.py  scoring.py
catch_fish-main/src/agents/chat/: agent.py  prompts.py
catch_fish-main/src/agents/encyclopedia/: prompts.py
catch_fish-main/src/agents/finder/: prompts.py
catch_fish-main/src/models/: orm.py  schemas.py
catch_fish-main/src/orchestrator/: agent.py  workflow.py
catch_fish-main/src/utils/: logger.py
resource/: b.md  cline.md  t.py  整理内容.md
scripts/: init_db.sql
src/: config.py  main.py
src/a2a/: __init__.py  agent_apps.py  client.py  launcher.py  server.py
src/agents/: base.py
src/agents/calculator/: agent.py  prompts.py  scoring.py
src/agents/chat/: agent.py
src/agents/encyclopedia/: agent.py  prompts.py  scrapers.py
src/agents/finder/: agent.py  prompts.py
src/gateway/: chat_router.py  middleware.py  router.py  server.py  session.py
src/mcp/: tools.py  xianyu_server.py
src/models/: database.py  orm.py  schemas.py
src/orchestrator/: agent.py  workflow.py
src/utils/: http_client.py
tests/: conftest.py  test_calculator.py  test_chat.py  test_finder.py  test_log.py  test_xianyu.py  testa.py
